--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,7 +1,7 @@
 <div class="about-main">
   <h2>きのうなにたべた？とは</h2>
-  <p>
-    SNSサービスです。
-    食べたモノの写真を投稿し、他のユーザーと楽しくコミュニケーションできます。
-  </p>
+  <p>昨日食べたものを覚えているでしょうか?</p>
+  <p>昨日食べたものは覚えていても一週間前に食べたものは覚えていない事が多いと思います。</p>
+  <p>食べたモノの写真を投稿し、記録していきましょう！</p>
+  <img src="/about_image.png">
 </div>
