--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -127,6 +127,7 @@ header {
   background-repeat: no-repeat;
   background-position: center 50%;
   background-size: cover;
+  background-image: url("/top_image1.jpg");
 }
 
 .top-message {
@@ -146,6 +147,11 @@ header {
 }
 
 /* about ================================ */
+img {
+  width: 30%;
+  height: 30%;
+}
+
 .about-main {
   padding: 180px 8% 0;
   color: white;
